--- a/index.html
+++ b/index.html
@@ -45,64 +45,6 @@
       <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="hero-button">Order Service</button>
-        <div class="modal-overlay">
-          <div class="modal">
-            <form>
-              <button type="button" class="close-modal-btn">
-                <svg width="8" height="8">
-                  <use href="./images/icons.svg#icon-exide"></use>
-                </svg>
-              </button>
-              <p class="pop-up-paragraph">Leave your contacts and we will call you back</p>
-              <div class="pop-up-field">
-                <label for="name">Name</label>
-                <div class="pop-up-case">
-                  <input type="text" name="name" id="name">
-                  <svg class="pop-up-svg" width="18" height="24">
-                    <use href=".//images/icons.svg#icon-person"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="pop-up-field">
-                <label for="phone">Phone</label>
-                <div class="pop-up-case">
-                  <input type="tel" name="phone" id="phone">
-                  <svg class="pop-up-svg" width="18" height="24">
-                    <use href=".//images/icons.svg#icon-phone"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="pop-up-field">
-                <label for="email">Email</label>
-                <div class="pop-up-case">
-                  <input type="email" name="email" id="email">
-                  <svg class="pop-up-svg" width="18" height="24">
-                    <use href=".//images/icons.svg#icon-email"></use>
-                  </svg>
-                </div>
-              </div>
-              <div class="pop-up-field">
-                <label for="comment">Comment</label>
-                <div class="pop-up-coment ">
-                  <textarea name="comment" id="comment" placeholder="Text input"></textarea>
-                </div>
-              </div>
-            </form>
-            <div class="subscription-form">
-              <label for="subscription" class="subscription-label">
-                <input class="subscription-checkbox" type="checkbox" name="subscription" id="subscription">
-                <span class="checkbox-border">
-                  <svg width="10" height="8">
-                    <use href="./images/icons.svg#icon-click"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="subscription-link" href="#">Privacy Policy</a>
-              </label>
-            </div>
-            <button class="button-form" type="submit">Send</button>
-          </div>
-        </div>
       </div>
     </section>
     <!-- Section feature -->
@@ -452,20 +394,79 @@
           </li>
         </ul>
       </div>
-      <form class="footer-subscribe">
-        <label class="footer-subscribe-label" for="footer-email">
-          <b class="footer-icon-description">Subscribe</b>
-          <input class="footer-subscribe-input" id="footer-email" type="email" name="footer-email" placeholder="E-mail">
-        </label>
-        <button class="footer-subscribe-button" type="submit">
-          Subscribe
-          <svg width="24" height="20">
-            <use href="./images/icons.svg#icon-telegram"></use>
-          </svg>
-        </button>
-      </form>
+      <div>
+        <p class="footer-subscribe-text">Subscribe</p>
+        <form class="footer-subscribe">
+          <label class="footer-subscribe-label" for="footer-email">
+            <input class="footer-subscribe-input" id="footer-email" type="email" name="footer-email"
+              placeholder="E-mail">
+          </label>
+          <button class="footer-subscribe-button" type="submit">
+            Subscribe
+            <svg class="footer-btn-svg" width="24" height="24">
+              <use href="./images/icons.svg#icon-telegram"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
   </footer>
+  <div class="modal-overlay is-open">
+    <div class="modal">
+      <form>
+        <button type="button" class="close-modal-btn">
+          <svg class="close-modal-btn-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-exide"></use>
+          </svg>
+        </button>
+        <p class="pop-up-paragraph">Leave your contacts and we will call you back</p>
+        <div class="pop-up-field">
+          <label class="pop-up-label" for="user-name">Name</label>
+          <div class="pop-up-case">
+            <input class="pop-up-input" type="text" name="user-name" id="user-name">
+            <svg class="pop-up-svg" width="18" height="24">
+              <use href=".//images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="pop-up-field">
+          <label class="pop-up-label" for="phone">Phone</label>
+          <div class="pop-up-case">
+            <input class="pop-up-input" type="tel" name="phone" id="phone">
+            <svg class="pop-up-svg" width="18" height="24">
+              <use href=".//images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="pop-up-field">
+          <label class="pop-up-label" for="email">Email</label>
+          <div class="pop-up-case">
+            <input class="pop-up-input" type="email" name="email" id="email">
+            <svg class="pop-up-svg" width="18" height="24">
+              <use href=".//images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="pop-up-coment-box">
+          <label class="pop-up-label" for="comment">Comment</label>
+          <textarea class="pop-up-coment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+        </div>
+        <div class="subscription-form">
+          <input class="checkbox visually-hidden" name="user-privacy" value="true" type="checkbox" id="user-privacy">
+          <label for="user-privacy" class="subscription-label">
+            <span class="checkbox-border">
+              <svg class="checkbox-svg" width="10" height="8">
+                <use href="./images/icons.svg#icon-click"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a class="subscription-link" href="#">Privacy Policy</a>
+          </label>
+        </div>
+        <button class="button-form" type="submit">Send</button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
