--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
   </footer>
   <div class="modal-overlay is-open">
     <div class="modal">
+      <button type="button" class="close-modal-btn">
+        <svg class="close-modal-btn-svg" width="8" height="8">
+          <use href="./images/icons.svg#icon-exide"></use>
+        </svg>
+      </button>
+      <p class="pop-up-paragraph">Leave your contacts and we will call you back</p>
       <form>
-        <button type="button" class="close-modal-btn">
-          <svg class="close-modal-btn-svg" width="8" height="8">
-            <use href="./images/icons.svg#icon-exide"></use>
-          </svg>
-        </button>
-        <p class="pop-up-paragraph">Leave your contacts and we will call you back</p>
         <div class="pop-up-field">
           <label class="pop-up-label" for="user-name">Name</label>
           <div class="pop-up-case">
@@ -448,7 +448,7 @@
           </div>
         </div>
         <div class="pop-up-coment-box">
-          <label class="pop-up-label" for="comment">Comment</label>
+          <label class="pop-up-label" for="user-comment">Comment</label>
           <textarea class="pop-up-coment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
         </div>
         <div class="subscription-form">
