--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="footer-subscribe-container">
         <p class="footer-subscribe-text">Subscribe</p>
         <form class="footer-subscribe">
           <label class="footer-subscribe-label" for="footer-email">
@@ -425,7 +425,7 @@
           <div class="pop-up-case">
             <input class="pop-up-input" type="text" name="user-name" id="user-name">
             <svg class="pop-up-svg" width="18" height="24">
-              <use href=".//images/icons.svg#icon-person"></use>
+              <use href="./images/icons.svg#icon-person"></use>
             </svg>
           </div>
         </div>
@@ -434,7 +434,7 @@
           <div class="pop-up-case">
             <input class="pop-up-input" type="tel" name="phone" id="phone">
             <svg class="pop-up-svg" width="18" height="24">
-              <use href=".//images/icons.svg#icon-phone"></use>
+              <use href="./images/icons.svg#icon-phone"></use>
             </svg>
           </div>
         </div>
@@ -443,7 +443,7 @@
           <div class="pop-up-case">
             <input class="pop-up-input" type="email" name="email" id="email">
             <svg class="pop-up-svg" width="18" height="24">
-              <use href=".//images/icons.svg#icon-email"></use>
+              <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
         </div>
